test/metaprogramming/5_Error_syntax_with_stmt.asc
.<(function f() {})>.;	// not error: (funcdef) is expr

.<function f() {}>.;	// error: funcdef is stmt